--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
       overflow: hidden !important;
     }
 
-    /* FUNDO + MARCA D’ÁGUA */
     body{
       font-family: Arial, sans-serif;
       color:#fff;
@@ -59,21 +58,17 @@
       z-index:0;
     }
 
-    /* ✅ LAYOUT SPLIT (PROFISSIONAL) */
     .app{
       position:relative;
       z-index:1;
       width:100%;
       height:100%;
       display:grid;
-
-      /* ✅ esquerda e direita equilibrados */
       grid-template-columns: minmax(480px, 1fr) minmax(460px, 52%);
       gap: 14px;
       padding: 14px 18px;
     }
 
-    /* ✅ Painel esquerdo */
     .left{
       min-width:0;
       height:100%;
@@ -83,7 +78,6 @@
       overflow:hidden;
     }
 
-    /* ✅ Painel direito */
     .right{
       min-width:0;
       height:100%;
@@ -112,25 +106,6 @@
       text-transform:uppercase;
       font-weight:900;
     }
-    .mini{
-      display:flex;
-      gap:8px;
-      align-items:center;
-    }
-    .mini button{
-      border:none;
-      cursor:pointer;
-      padding:8px 10px;
-      border-radius:12px;
-      font-weight:900;
-      letter-spacing:.03em;
-      color:#041b2f;
-      background: linear-gradient(90deg, #00e09c, #1376b8);
-      box-shadow: 0 10px 18px rgba(0,0,0,.14);
-      font-size:12px;
-      white-space:nowrap;
-    }
-    .mini button:active{ transform:translateY(1px); }
 
     .frameWrap{
       flex:1 1 auto;
@@ -146,7 +121,6 @@
       background:#fff;
     }
 
-    /* HEADER do sistema */
     header{
       flex:0 0 auto;
       display:flex;
@@ -168,7 +142,7 @@
       text-shadow: 0 12px 28px rgba(0,0,0,.32);
     }
 
-    .sysOnly .t1{ font-size: 20px; } /* ✅ menor no split */
+    .sysOnly .t1{ font-size: 20px; }
     .sysOnly .dot{
       font-size: 14px;
       opacity: .82;
@@ -210,28 +184,21 @@
       text-transform:uppercase;
     }
 
-    /* ✅ MAIN: ocupa o restante */
     main{
       flex: 1 1 auto;
       min-height: 0;
       display:flex;
       align-items:stretch;
       justify-content:center;
-
-      /* ✅ menos “empurrão” */
       padding-top: 10px;
     }
 
-    /* ✅ CARD CENTRAL ajustado */
     .glass{
       width: 100%;
       max-width: 1180px;
-
-      /* ✅ se adapta à tela */
       height: auto;
       min-height: 0;
       max-height: calc(100vh - 110px);
-
       border-radius: 26px;
       border: 1px solid var(--stroke);
       background: linear-gradient(180deg, rgba(255,255,255,.13), rgba(255,255,255,.06));
@@ -239,7 +206,6 @@
       backdrop-filter: blur(14px);
       -webkit-backdrop-filter: blur(14px);
       overflow: hidden;
-
       display:flex;
     }
 
@@ -247,20 +213,16 @@
       width:100%;
       height:100%;
       min-height:0;
-
       padding: 14px 16px;
       display:flex;
       flex-direction:column;
-
-      /* ✅ controla espaçamento profissional */
       gap: 10px;
-
-      overflow:auto; /* ✅ se precisar, rola sem esconder botão */
+      overflow:auto;
     }
 
     .panelTitle{
       margin:0;
-      font-size: 22px; /* ✅ menor e elegante */
+      font-size: 22px;
       font-weight: 900;
       letter-spacing: 1px;
       text-transform: uppercase;
@@ -291,7 +253,7 @@
       background: rgba(0,0,0,.12);
       white-space: nowrap;
       color:#fff;
-      font-size: 13px; /* ✅ menor no split */
+      font-size: 13px;
     }
     .guideLine .sep{
       opacity:.55;
@@ -299,13 +261,11 @@
       color: rgba(255,255,255,.75);
     }
 
-    /* ✅ TEXTAREA: flexível e profissional */
     textarea{
       width:100%;
       flex: 1 1 auto;
       min-height: 220px;
       max-height: 360px;
-
       resize:none;
       border-radius: 18px;
       border: 1px solid rgba(255,255,255,.18);
@@ -316,12 +276,10 @@
       font-size: 15px;
       color:#fff;
       line-height: 1.35;
-
       overflow:auto;
     }
     textarea::placeholder{ color: rgba(255,255,255,.64); }
 
-    /* ✅ BOTÃO: sempre aparece */
     .btn{
       flex:0 0 auto;
       align-self: center;
@@ -330,7 +288,7 @@
       border-radius: 18px;
       padding: 12px 16px;
       cursor:pointer;
-      font-size: 16px; /* ✅ proporcional */
+      font-size: 16px;
       font-weight: 900;
       letter-spacing: .3px;
       color:#041b2f;
@@ -341,12 +299,8 @@
     .btn:hover{ filter: brightness(1.03); }
     .btn:active{ transform: translateY(1px); }
 
-    /* ✅ RESPONSIVO */
     @media (max-width: 1180px){
-      .app{
-        grid-template-columns: 1fr;
-        padding: 12px;
-      }
+      .app{ grid-template-columns: 1fr; padding: 12px; }
       .right{ height: 62vh; }
       main{ padding-top: 12px; }
       .glass{ max-height: none; }
@@ -362,7 +316,6 @@
 <body>
   <div class="app">
 
-    <!-- ✅ ESQUERDA (SISTEMA) -->
     <div class="left">
       <header>
         <h1 class="sysOnly">
@@ -403,14 +356,9 @@
       </main>
     </div>
 
-    <!-- ✅ DIREITA (LAUDO) -->
     <aside class="right">
       <div class="rightTop">
         <strong>LAUDO — EMISSÃO</strong>
-        <div class="mini">
-          <button type="button" id="btnFoco">Limpar e foco</button>
-          <button type="button" id="btnRecarregar">Recarregar laudo</button>
-        </div>
       </div>
       <div class="frameWrap">
         <iframe id="iframeLaudo" title="Laudo"></iframe>
@@ -423,7 +371,6 @@
     const LAUDO_URL = "laudo.html";
     const $ = (id)=>document.getElementById(id);
 
-    // ✅ mapa fixo: sigla -> nome completo
     const MAPA_RESP = {
       "EAM": "EDVÂNIA APARECIDA MENDES DE AZEVÊDO",
       "SNM": "SHEINA N. MORAIS RAMALHO"
@@ -526,6 +473,9 @@
       if(dados.responsavel)     params.set("responsavel", dados.responsavel);
       if(dados.observacao)      params.set("observacao", dados.observacao);
 
+      // ✅ CACHE-BUSTER DEFINITIVO
+      params.set("v", Date.now());
+
       $("iframeLaudo").src = `${LAUDO_URL}?${params.toString()}`;
     }
 
@@ -562,12 +512,6 @@
         e.preventDefault();
         $("btnExtrair").click();
       }
-    });
-
-    $("btnFoco").addEventListener("click", prepararProximoPaciente);
-    $("btnRecarregar").addEventListener("click", ()=>{
-      const fr = $("iframeLaudo");
-      if(fr && fr.src) fr.contentWindow.location.reload();
     });
 
     window.addEventListener("message", (ev)=>{
